# Coach-CC

./: .env.example  .gitignore  CLAUDE.example.md  CLAUDE.md  IDEAS.md  LICENSE  README.md  plan-v3.md  pyproject.toml
docs/: philosophy.example.md
launchd/: com.petter.trening.backup.plist.template  com.petter.trening.bot.plist.template  com.petter.trening.sync.plist.template  com.trening.backup.plist.template  com.trening.bot.plist.template  com.trening.sync.plist.template  install.py  start-bot.sh  start-bot.sh.template
spikes/: concept2_oauth.py  garmin_login.py  import_strength_xlsx.py  withings_oauth.py  yazio_login.py
src/: backup.py  fit_parser.py  paths.py  reconcile.py  schemas.py  sync.py
src/analysis/: baselines.py  exercises.py  recovery.py
src/cli/: _common.py  baselines.py  block.py  context.py  exercise.py  goals.py  hrv_trend.py  injury.py  intake.py  last_workouts.py  nutrition.py  plan.py  prefs.py  progression.py  prs.py  report.py  rpe.py  sleep_summary.py  status.py  strength.py  volume.py  weight_trend.py  wellness.py
src/coaching/: history.py  philosophy.py  preferences.py
tests/: test_baselines.py  test_cli.py  test_coaching_history.py  test_coaching_phase.py  test_coaching_philosophy.py  test_coaching_preferences.py  test_coaching_zones_volume_fueling.py  test_concept2_parse.py  test_exercises.py  test_fit_parser.py  test_garmin_parse.py  test_hevy_integration.py  test_hevy_parse.py  test_migrations.py  test_reconcile.py  test_recovery.py  test_source_base.py  test_strength_log.py  test_withings_parse.py  test_yazio_parse.py
(+12 files in other folders)
