[project]
name = "trening"
version = "0.1.0"
description = "Personlig trenings- og helsedata-system"
requires-python = ">=3.12"
dependencies = [
    "garminconnect>=0.2.25",
    "fitdecode>=0.11.0",
    "pydantic>=2.0",
    "typer>=0.12",
    "structlog>=24.1",
    "python-dotenv>=1.0",
    "httpx>=0.27",
]

[dependency-groups]
dev = [
    "openpyxl>=3.1.5",
    "pytest>=8.0",
    "pytest-mock>=3.12",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
